Minor regression fixes
Two small things:
- "CouchDB" instead of "Couch DB" text on login page
- the icons in the database top header menu were too large due to
the recent cog->vertical ellipsis icon change.  This fixes their
size and spacing.

--- a/assets/less/fauxton.less
+++ b/assets/less/fauxton.less
@@ -453,16 +453,17 @@ body #dashboard .flex-body#breadcrumbs {
     .dropdown-toggle {
       color: #666666;
       &:before {
-        margin-top: 6px;
         margin: 6px -5px 0 6px;
+      }
+    }
+    .fonticon-vertical-ellipsis {
+      &:before {
+        font-size: 20px;
       }
     }
     a {
       padding: 10px;
       text-decoration: none;
-      &:before {
-        font-size: 20px;
-      }
     }
 
     .dropdown {
@@ -473,6 +474,11 @@ body #dashboard .flex-body#breadcrumbs {
     .dropdown-menu {
       left: -115px;
       top: 48px;
+
+      a.icon:before {
+        font-size: 14px;
+        padding-right: 7px;
+      }
     }
   }
 }
